--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -1,22 +1,25 @@
-name: PHP Syntax Check (CI)
+name: PHP + Tailwind CI
 
-on:
-  push:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
-  lint:
-    name: Cek Syntax PHP
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout kode
-      uses: actions/checkout@v3
+    - name: Checkout Repo
+      uses: actions/checkout@v2
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
       with:
-        php-version: '8.1'
+        node-version: '18'
 
-    - name: Cek Error Syntax PHP
-      run: find . -type f -name "*.php" -exec php -l {} \;
+    - name: Install Tailwind CLI
+      run: npm install
+
+    - name: Build Tailwind CSS
+      run: npx tailwindcss -i ./assets/input.css -o ./assets/output.css
+
+    - name: Check PHP syntax
+      run: find . -name "*.php" -exec php -l {} \;
