--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "fill-range": "^7.1.1",
     "foreground-child": "^3.3.1",
     "fraction.js": "^4.3.7",
-    "fsevents": "^2.3.3",
     "function-bind": "^1.1.2",
     "glob": "^10.4.5",
     "glob-parent": "^6.0.2",
@@ -112,5 +111,7 @@
     "wrap-ansi-cjs": "^7.0.0",
     "yaml": "^2.8.0"
   },
-  "description": ""
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
+  }
 }
