--- a/.github/workflows/php-ci.yml
+++ b/.github/workflows/php-ci.yml
@@ -26,4 +26,5 @@ jobs:
 
       - name: Check PHP syntax
         run: |
-          find . -name "*.php" -not -path "./vendor/*" -exec php -l {} \;
+            find . -type f -name "*.php" -exec php -l {} \;
+
